change the encounterProvider role  from oncology Provider for Echochardiography form

--- a/NCD HTML forms/NCD HF_HTN_CKD  Echochardiography.html
+++ b/NCD HTML forms/NCD HF_HTN_CKD  Echochardiography.html
@@ -361,7 +361,7 @@
                     </td>
                     <td>Date: <encounterDate id="encounterDate" default="today" /> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                         Provider:<encounterProvider id="encounterProvider"
-                                                    role="Oncology Provider" default="currentUser"/>
+                                                    role="Provider" default="currentUser"/>
                     </td>
                 </tr>
             </table>
