--- a/Oncology HTML forms--this folder should be moved/Oncology - Non-Hodgkins Lymphoma(NHL) DST.html
+++ b/Oncology HTML forms--this folder should be moved/Oncology - Non-Hodgkins Lymphoma(NHL) DST.html
@@ -835,11 +835,11 @@
 
             <tr>
                 <td><b>Pathologic Diagnosis</b><br />
-                    <br /> <b>Indolent NHL Subtype</b><br/> <obs
-                            conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
+                    <br /> <b>Indolent NHL Subtype</b><br/>
+                        <obs conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
                             answerConceptId="$@FOLLICULAR_LYMPHOMA@"
-                            answerLabel="Follicular lymphoma" /><br /> <obs
-                            conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
+                            answerLabel="Follicular lymphoma" /><br />
+                    <obs conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
                             answerConceptId="$@MARGINAL_ZONE_LYMPHOMA@"
                             answerLabel="Marginal zone Lymphoma" /> <br />
                     <obs conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
