--- a/Oncology HTML forms--this folder should be moved/Oncology DST Breast.html
+++ b/Oncology HTML forms--this folder should be moved/Oncology DST Breast.html
@@ -615,6 +615,8 @@
     @COMMENTS@=6602a73b-b8d3-40bc-bae8-f00ff3b9cceb </macros>
 
 
+
+    @Diagnosis_Status@ =c8dea23e-c596-40d0-a4a4-08cb61b82d3b
     <style>
         .section {
         border: 1px solid$headerColor;
