--- a/Oncology HTML forms--this folder should be moved/Oncology Demographics.html
+++ b/Oncology HTML forms--this folder should be moved/Oncology Demographics.html
@@ -427,6 +427,16 @@
 						conceptId="55bd1ac5-d8aa-4fab-abb3-eb92c44e23e1" />
 				</td>
 			</tr>
+			<!--
+			<tr>
+				<td colspan="2">
+					<strong>IMB Primary Care Registration ID: </strong> <patient field="identifier" identifierTypeId="4e458867-9a68-4e55-9fe0-fb49fac4e6b0"/> <br/>
+					<strong>ARCHIVING ID: </strong> <patient field="identifier" identifierTypeId="317ce1ae-27e7-4a79-b320-21cbd1aa551c"/> <br/>
+					<strong>Rwanda National ID: </strong> <patient field="identifier" identifierTypeId="ed52ec82-4b7c-411b-804a-13bd9651bb3e"/> <br/>
+
+				</td>
+			</tr>
+			-->
 			<tr>
 				<td><b>Family care-giver</b></td>
 				<td> <obsgroup groupingConceptId="3cd9936a-26fe-102b-80cb-0017a47871b2">
