--- a/Oncology HTML forms--this folder should be moved/Oncology - Cervical Cancer DST.html
+++ b/Oncology HTML forms--this folder should be moved/Oncology - Cervical Cancer DST.html
@@ -472,22 +472,22 @@
     @CHORIOCARCINOMA@=64ec20aa-be6b-4265-876a-b6090618044c
     @PLACENTAL_SITE_TROPHOBLASTIC_TUMOR@=94f9985b-690a-48f7-9f4d-d3b0963ddcd0
     @GASTRIC_ADENOCARCINOMA@=f4d7d6af-b655-450c-aa75-56bd5e35601e
-    @GE_JUNCTION_ADENOCARCINOMA@=d6e87d99-5c07-413c-b6b3-6b0947966e35
-    @DISTAL_ESOPHAGEAL_ADENOCARCENOMA@=e0c5aea6-a656-4347-9b55-5437588cab10
-    @RECTAL_ADENOCARCINOMA@=bba477ec-26b4-4893-a08b-de3ed323910b
-    @CERVICAL_SQUAMOUS_CELL_CARCINOMA@=9655287c-b5d7-4b06-b807-11e849c2ad6b
-    @CERVICAL_ADENOCARCINOMA@=30df7ea0-b11f-4e78-9e6a-3aaccd7716a6
-    @KAPOSI_SARCOMA@=3cd173f6-26fe-102b-80cb-0017a47871b2
-    @ANAL_SQUAMOUS_CELL_CARCINOMA@=80a2cc19-f644-4b14-bcb9-ac20c7dcce8e
-    @SQUAMOUS_CELL_CARCINOMA@=5890a4dd-d973-4fdc-837e-17848a0d6bce
-    @NASOPHARYNGEAL_CARCINOMA@=d04821ab-471f-422e-a061-c91c0cb019f9
-    @MUCOEPIDERMOID_CARCINOMA@=32c9895f-31a9-4ecc-93e2-ecab971cb491
-    @ADENOID_CYSTIC_CARCINOMA@=c2231c88-bdda-46f0-a41f-1906632d2bc1
-    @ADENOCARCINOMA@=6b90d239-4e88-4582-89a1-1c4bb9fca2d8
-    @FOLLICULAR_CARCINOMA@=d18af6e0-ec46-434d-b3ef-1689668df98b
-    @PAPILLARY_CARCINOMA@=6d274dd4-8455-4f84-aa3b-b157a64e101f
-    @ANAPLASTIC_CARCINOMA@=ce3574e5-74a5-4030-98bc-1d347de622ed
-    @MEDULLARY_CARCINOMA@=ce3574e5-74a5-4030-98bc-1d347de622ed
+    <!--@GE_JUNCTION_ADENOCARCINOMA@=d6e87d99-5c07-413c-b6b3-6b0947966e35-->
+    <!--@DISTAL_ESOPHAGEAL_ADENOCARCENOMA@=e0c5aea6-a656-4347-9b55-5437588cab10-->
+    <!--@RECTAL_ADENOCARCINOMA@=bba477ec-26b4-4893-a08b-de3ed323910b-->
+    <!--@CERVICAL_SQUAMOUS_CELL_CARCINOMA@=9655287c-b5d7-4b06-b807-11e849c2ad6b-->
+    <!--@CERVICAL_ADENOCARCINOMA@=30df7ea0-b11f-4e78-9e6a-3aaccd7716a6-->
+    <!--@KAPOSI_SARCOMA@=3cd173f6-26fe-102b-80cb-0017a47871b2-->
+    <!--@ANAL_SQUAMOUS_CELL_CARCINOMA@=80a2cc19-f644-4b14-bcb9-ac20c7dcce8e-->
+    <!--@SQUAMOUS_CELL_CARCINOMA@=5890a4dd-d973-4fdc-837e-17848a0d6bce-->
+    <!--@NASOPHARYNGEAL_CARCINOMA@=d04821ab-471f-422e-a061-c91c0cb019f9-->
+    <!--@MUCOEPIDERMOID_CARCINOMA@=32c9895f-31a9-4ecc-93e2-ecab971cb491-->
+    <!--@ADENOID_CYSTIC_CARCINOMA@=c2231c88-bdda-46f0-a41f-1906632d2bc1-->
+    <!--@ADENOCARCINOMA@=6b90d239-4e88-4582-89a1-1c4bb9fca2d8-->
+    <!--@FOLLICULAR_CARCINOMA@=d18af6e0-ec46-434d-b3ef-1689668df98b-->
+    <!--@PAPILLARY_CARCINOMA@=6d274dd4-8455-4f84-aa3b-b157a64e101f-->
+    <!--@ANAPLASTIC_CARCINOMA@=ce3574e5-74a5-4030-98bc-1d347de622ed-->
+    <!--@MEDULLARY_CARCINOMA@=ce3574e5-74a5-4030-98bc-1d347de622ed-->
 
     @SITE_OF_BIOPSY@=06afd2f9-dcfb-4810-9c3b-8a8fe1110cfe
     @OTHER_SITE_OF_BIOPSY@=5e1eca70-d380-492a-82c2-fa89c4924b7d
@@ -607,6 +607,38 @@
     @PLANNED_TREATMENT_CHANGES@=32e38d0f-0d0e-4192-a5cb-ae9e1dd13436
 
     @COMMENTS@=6602a73b-b8d3-40bc-bae8-f00ff3b9cceb
+
+
+    // Diagnosis workflow.
+    @DIAGNOSIS_work_flow@ = 2e602550-4337-4ffa-90a2-7becc3f167b1
+    @Diagnosis_Status@ =c8dea23e-c596-40d0-a4a4-08cb61b82d3b
+
+    //Diagnosis states.
+    @Breast_Cancer@ = c733a3d0-c89b-4d88-9d89-b590e9175297
+    @Other_non_Hodgkins_lymphoma@ = 1bdce46f-62d3-4eb1-acfa-644cfd99993a
+    @Large_B_cell_lymphoma@ = 70d5c89b-657d-4e46-a7e6-62cf2c04a873
+    @Other_solid_cancer@ = 8c3f2a38-eb43-4b13-87c2-4a85d66cafb1
+    @Burkitts_lymphoma@ = 890a3c62-ec89-41a0-8ffb-ca551dc36b18
+    @Cervical_cancer@ = 441c3084-33d1-49a5-abd6-9e8b19ddf049
+    @Colo_rectal_cancer@ = 34e298a3-8ca4-470e-8e4f-f422af9feef9
+    @Head_and_neck_cancer@ = d84e31f8-ebe2-4f31-8655-b29dfe671be4
+    @Chronic_Myelogenous_leukemia@ = f4eb9f32-ddad-44a2-b8da-309bfd0549e4
+    @Acute_Lymphoblastic_Leukemia@ = b2a69a8a-599f-405f-b11e-5b9f50267921
+    @Other_liquid_cancer@ = 9b9af079-2ad0-4860-9844-48d020912dc2
+    @Karposis_sarcoma@ = 9c9fdd7c-1903-4f90-90f1-50d0c794fe6a
+    @Stomach_cancer@ = 3609c073-1b51-438d-849b-35d23f042484
+    @Hodgkins_lymphoma@ = ca083335-c209-4d50-8a40-26bd5ef3545e
+    @Prostate_cancer@ = 9fb6150d-cd19-43fc-8da9-e6599fac9709
+    @Multiple_myeloma@ = 85f296a1-f196-4405-9dc6-1c36107e6df2
+    @Lung_cancer_diagnosis@ = b4cdfb5f-275b-4a76-893b-761ae302976d
+    @Nephroblastoma@ = 4cef0cce-67b9-4cf5-860e-503ade7ff37a
+    @Metastatic_cancer@ = cb041132-1c31-4580-aff3-3564e18b985b
+    @Cancer_unknown_type@ = 651f49b1-cead-434c-841b-2a4e2533ed3d
+    @Not_cancer_no_biopsy@ = 0ec01a69-95d9-4319-8458-c71106893035
+    @Anal_Squamous_Cell_Carcinoma@ = 507d4f4c-1456-41b2-9ba4-cf03e9b55703
+    @Other_solid_cancer@ = 8c3f2a38-eb43-4b13-87c2-4a85d66cafb1
+    @Cervical_squamous_cell_carcinoma@ = 3d262ad1-9357-4d8d-9b5c-5c1ee7a8af31
+    @Cervical_adenocarcinoma@ = 9c8f3875-b66d-4cb7-956b-b36b7e43f5ac
 
 
 </macros>
@@ -855,21 +887,42 @@
 
 
 
-            <tr>
-                <td><b>Pathologic Diagnosis</b><br/>
-                    <obs
-                            conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
-                            answerConceptId="$@CERVICAL_SQUAMOUS_CELL_CARCINOMA@" answerLabel="Cervical squamous cell carcinoma" /> <br/>
-                    <obs
-                            conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
-                            answerConceptId="$@CERVICAL_ADENOCARCINOMA@" answerLabel="Cervical adenocarcinoma" /> <br/>
-                    <obs	conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
-                            answerConceptId="$@OTHER_NON_CODED@" answerLabel="Other" /> <obs
-                            conceptId="$@OTHER_PATHOLOGIC_DIAGNOSIS@" /><br/><br/>
+            <!--<tr>-->
+                <!--<td><b>Pathologic Diagnosis</b><br/>-->
+                    <!--<obs-->
+                            <!--conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"-->
+                            <!--answerConceptId="$@CERVICAL_SQUAMOUS_CELL_CARCINOMA@" answerLabel="Cervical squamous cell carcinoma" /> <br/>-->
+                    <!--<obs-->
+                            <!--conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"-->
+                            <!--answerConceptId="$@CERVICAL_ADENOCARCINOMA@" answerLabel="Cervical adenocarcinoma" /> <br/>-->
+                    <!--<obs	conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"-->
+                            <!--answerConceptId="$@OTHER_NON_CODED@" answerLabel="Other" /> <obs-->
+                            <!--conceptId="$@OTHER_PATHOLOGIC_DIAGNOSIS@" /><br/><br/>-->
 
+                <!--</td>-->
+            <!--</tr>-->
+
+
+            <tr>
+                <td>
+                    <table border="1">
+                        <tr>
+                            <td>
+                                <b>Pathologic Diagnosis</b><br />
+                                <workflowState workflowId="$@DIAGNOSIS_work_flow@"
+                                               stateIds="$@Cervical_squamous_cell_carcinoma@,$@Cervical_adenocarcinoma@,$@Other_solid_cancer@"
+                                               type="radio" />
+
+                                <obs conceptId="$@OTHER_PATHOLOGIC_DIAGNOSIS@" />
+                                <br/>
+                                <b> Diagnosis Status </b><br />
+                                <workflowState workflowId="$@Diagnosis_Status@" type="radio"/>
+
+                            </td>
+                        </tr>
+                    </table>
                 </td>
             </tr>
-
 
             <tr>
                 <td><b>HPV or p16 Status (If available)</b>
