--- a/Oncology HTML forms--this folder should be moved/Oncology - Chronic Lymphocytic Leukemia or Small Lymphocytic Lymphoma DST.html
+++ b/Oncology HTML forms--this folder should be moved/Oncology - Chronic Lymphocytic Leukemia or Small Lymphocytic Lymphoma DST.html
@@ -601,7 +601,44 @@
 
     @PLANNED_TREATMENT_CHANGES@=32e38d0f-0d0e-4192-a5cb-ae9e1dd13436
 
-    @COMMENTS@=6602a73b-b8d3-40bc-bae8-f00ff3b9cceb </macros>
+    @COMMENTS@=6602a73b-b8d3-40bc-bae8-f00ff3b9cceb
+
+    // Diagnosis workflow.
+    @DIAGNOSIS_work_flow@ = 2e602550-4337-4ffa-90a2-7becc3f167b1
+    @Diagnosis_Status@ =c8dea23e-c596-40d0-a4a4-08cb61b82d3b
+
+    //Diagnosis states.
+    @Breast_Cancer@ = c733a3d0-c89b-4d88-9d89-b590e9175297
+    @Other_non_Hodgkins_lymphoma@ = 1bdce46f-62d3-4eb1-acfa-644cfd99993a
+    @Large_B_cell_lymphoma@ = 70d5c89b-657d-4e46-a7e6-62cf2c04a873
+    @Other_solid_cancer@ = 8c3f2a38-eb43-4b13-87c2-4a85d66cafb1
+    @Burkitts_lymphoma@ = 890a3c62-ec89-41a0-8ffb-ca551dc36b18
+    @Cervical_cancer@ = 441c3084-33d1-49a5-abd6-9e8b19ddf049
+    @Colo_rectal_cancer@ = 34e298a3-8ca4-470e-8e4f-f422af9feef9
+    @Head_and_neck_cancer@ = d84e31f8-ebe2-4f31-8655-b29dfe671be4
+    @Chronic_Myelogenous_leukemia@ = f4eb9f32-ddad-44a2-b8da-309bfd0549e4
+    @Acute_Lymphoblastic_Leukemia@ = b2a69a8a-599f-405f-b11e-5b9f50267921
+    @Other_liquid_cancer@ = 9b9af079-2ad0-4860-9844-48d020912dc2
+    @Karposis_sarcoma@ = 9c9fdd7c-1903-4f90-90f1-50d0c794fe6a
+    @Stomach_cancer@ = 3609c073-1b51-438d-849b-35d23f042484
+    @Hodgkins_lymphoma@ = ca083335-c209-4d50-8a40-26bd5ef3545e
+    @Prostate_cancer@ = 9fb6150d-cd19-43fc-8da9-e6599fac9709
+    @Multiple_myeloma@ = 85f296a1-f196-4405-9dc6-1c36107e6df2
+    @Lung_cancer_diagnosis@ = b4cdfb5f-275b-4a76-893b-761ae302976d
+    @Nephroblastoma@ = 4cef0cce-67b9-4cf5-860e-503ade7ff37a
+    @Metastatic_cancer@ = cb041132-1c31-4580-aff3-3564e18b985b
+    @Cancer_unknown_type@ = 651f49b1-cead-434c-841b-2a4e2533ed3d
+    @Not_cancer_no_biopsy@ = 0ec01a69-95d9-4319-8458-c71106893035
+    @Anal_Squamous_Cell_Carcinoma@ = 507d4f4c-1456-41b2-9ba4-cf03e9b55703
+    @Other_solid_cancer@ = 8c3f2a38-eb43-4b13-87c2-4a85d66cafb1
+    @T-cell_acute_lymphoblastic_leukemia_(ALL)@ =  e6783e43-a0ee-49c1-a898-ba65ae562c01
+    @B-Cell_acute_lymphoblastic_leukemia_(ALL)@ = 1514ee11-b823-48b7-aa36-d5e869e2908c
+    @Other_liquid_cancer@ = 9b9af079-2ad0-4860-9844-48d020912dc2
+    @Cervical_squamous_cell_carcinoma@ = 3d262ad1-9357-4d8d-9b5c-5c1ee7a8af31
+    @Cervical_adenocarcinoma@ = 9c8f3875-b66d-4cb7-956b-b36b7e43f5ac
+    @Chronic_Lymphocytic_Leukemia_Small_Lymphocytic_Lymphoma@ = 8d9cfec4-c4cb-43bd-974c-d9d5c8130c12
+
+</macros>
 
 
     <style>
@@ -857,14 +894,35 @@
                 </td>
             </tr>
 
+            <!--<tr>-->
+                <!--<td><b>Pathologic Diagnosis</b><br />-->
+                    <!--<obs conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"-->
+                         <!--answerConceptId="$@CLL@"-->
+                         <!--answerLabel="Chronic lymphocytic leukemia / small lymphocytic lymphoma (CLL/SLL)" /><br/>-->
+                    <!--<obs conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"-->
+                         <!--answerConceptId="$@OTHER_NON_CODED@" answerLabel="Other" />-->
+                    <!--<obs conceptId="$@OTHER_PATHOLOGIC_DIAGNOSIS@" />-->
+                <!--</td>-->
+            <!--</tr>-->
+
             <tr>
-                <td><b>Pathologic Diagnosis</b><br />
-                    <obs conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
-                         answerConceptId="$@CLL@"
-                         answerLabel="Chronic lymphocytic leukemia / small lymphocytic lymphoma (CLL/SLL)" /><br/>
-                    <obs conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
-                         answerConceptId="$@OTHER_NON_CODED@" answerLabel="Other" />
-                    <obs conceptId="$@OTHER_PATHOLOGIC_DIAGNOSIS@" />
+                <td>
+                    <table border="1">
+                        <tr>
+                            <td>
+                                <b>Pathologic Diagnosis</b><br />
+                                <workflowState workflowId="$@DIAGNOSIS_work_flow@"
+                                               stateIds="$@Chronic_Lymphocytic_Leukemia_Small_Lymphocytic_Lymphoma@,$@Other_liquid_cancer@"
+                                               type="radio" />
+
+                                <obs conceptId="$@OTHER_PATHOLOGIC_DIAGNOSIS@" />
+                                <br/>
+                                <b> Diagnosis Status </b><br />
+                                <workflowState workflowId="$@Diagnosis_Status@" type="radio"/>
+
+                            </td>
+                        </tr>
+                    </table>
                 </td>
             </tr>
 
