added workflow on the these dst forms
on the remaining ones

--- a/Oncology HTML forms--this folder should be moved/Oncology DST Breast.html
+++ b/Oncology HTML forms--this folder should be moved/Oncology DST Breast.html
@@ -612,11 +612,71 @@
 
     @PLANNED_TREATMENT_CHANGES@=32e38d0f-0d0e-4192-a5cb-ae9e1dd13436
 
-    @COMMENTS@=6602a73b-b8d3-40bc-bae8-f00ff3b9cceb </macros>
+    @COMMENTS@=6602a73b-b8d3-40bc-bae8-f00ff3b9cceb
 
 
-
+    // Diagnosis workflow.
+    @DIAGNOSIS_work_flow@ = 2e602550-4337-4ffa-90a2-7becc3f167b1
     @Diagnosis_Status@ =c8dea23e-c596-40d0-a4a4-08cb61b82d3b
+
+    //Diagnosis states.
+    @Breast_Cancer@ = c733a3d0-c89b-4d88-9d89-b590e9175297
+    @Other_non_Hodgkins_lymphoma@ = 1bdce46f-62d3-4eb1-acfa-644cfd99993a
+    @Large_B_cell_lymphoma@ = 70d5c89b-657d-4e46-a7e6-62cf2c04a873
+    @Other_solid_cancer@ = 8c3f2a38-eb43-4b13-87c2-4a85d66cafb1
+    @Burkitts_lymphoma@ = 890a3c62-ec89-41a0-8ffb-ca551dc36b18
+    @Cervical_cancer@ = 441c3084-33d1-49a5-abd6-9e8b19ddf049
+    @Colo_rectal_cancer@ = 34e298a3-8ca4-470e-8e4f-f422af9feef9
+    @Head_and_neck_cancer@ = d84e31f8-ebe2-4f31-8655-b29dfe671be4
+    @Chronic_Myelogenous_leukemia@ = f4eb9f32-ddad-44a2-b8da-309bfd0549e4
+    @Acute_Lymphoblastic_Leukemia@ = b2a69a8a-599f-405f-b11e-5b9f50267921
+    @Other_liquid_cancer@ = 9b9af079-2ad0-4860-9844-48d020912dc2
+    @Karposis_sarcoma@ = 9c9fdd7c-1903-4f90-90f1-50d0c794fe6a
+    @Stomach_cancer@ = 3609c073-1b51-438d-849b-35d23f042484
+    @Hodgkins_lymphoma@ = ca083335-c209-4d50-8a40-26bd5ef3545e
+    @Prostate_cancer@ = 9fb6150d-cd19-43fc-8da9-e6599fac9709
+    @Multiple_myeloma@ = 85f296a1-f196-4405-9dc6-1c36107e6df2
+    @Lung_cancer_diagnosis@ = b4cdfb5f-275b-4a76-893b-761ae302976d
+    @Nephroblastoma@ = 4cef0cce-67b9-4cf5-860e-503ade7ff37a
+    @Metastatic_cancer@ = cb041132-1c31-4580-aff3-3564e18b985b
+    @Cancer_unknown_type@ = 651f49b1-cead-434c-841b-2a4e2533ed3d
+    @Not_cancer_no_biopsy@ = 0ec01a69-95d9-4319-8458-c71106893035
+    @Anal_Squamous_Cell_Carcinoma@ = 507d4f4c-1456-41b2-9ba4-cf03e9b55703
+    @T-cell_acute_lymphoblastic_leukemia_(ALL)@ =  e6783e43-a0ee-49c1-a898-ba65ae562c01
+    @B-Cell_acute_lymphoblastic_leukemia_(ALL)@ = 1514ee11-b823-48b7-aa36-d5e869e2908c
+    @Cervical_squamous_cell_carcinoma@ = 3d262ad1-9357-4d8d-9b5c-5c1ee7a8af31
+    @Cervical_adenocarcinoma@ = 9c8f3875-b66d-4cb7-956b-b36b7e43f5ac
+    @Chronic_Lymphocytic_Leukemia_Small_Lymphocytic_Lymphoma@ = 8d9cfec4-c4cb-43bd-974c-d9d5c8130c12
+    @Chronic_Myelogenous_leukemia@ = f4eb9f32-ddad-44a2-b8da-309bfd0549e4
+    @Colon_Adenocarcinoma@ = 3379db15-61a6-44d6-aa27-fff95230b112
+    @Gastric_adenocarcinoma@ = e3c1696e-35dc-4bd4-a14d-dbce9e39f3bd
+    @GE_junction_adenocarcinoma@ = 88bdc77c-4766-4b52-9dd2-57c1a295f3ba
+    @distal_esophageal_adenocarcinoma@ = 687a2b9b-f002-4cea-a567-b723a3007d3b
+    @SQUAMOUS_CELL_CARCINOMA@ = 3ed0b1eb-4835-4dbf-8e1a-13598afd5fcc
+    @Nasopharyngeal_carcinoma@ = 5d5d6b03-de11-47e6-b037-5142ee7dcd73
+    @Mucoepidermoid_carcinoma@ = ad174bec-a714-4d21-bf10-8d4db5ad50b7
+    @Adenoid_cystic_carcinoma@ = c343bf6b-8446-41b4-a233-6bc4c82af2c9
+    @ADENOCARCINOMA@ = aec66f28-2aee-4e87-821d-9839705aa9b2
+    @Follicular_carcinoma@ = 90313fcd-88af-4e72-9661-423684ec45c7
+    @Papillary_carcinoma@ = 95db92ff-9fa6-4ede-873b-becc31545786
+    @Anaplastic_Carcinoma@ = 0a40e632-adef-43fa-8951-edff18119d7e
+    @Medullary_carcinoma@ = afcb02d3-e474-44ee-b841-dc863b8804a3
+    @Classical_Hodgkin_Lymphoma@ = 773a1d5e-783d-4590-acb8-6c10715ce4f1
+    @Nodular_Lymphocyte_Predominant@ = 977bebe9-e6e6-4534-87bd-b707be17003d
+    @FOLLICULAR_LYMPHOMA@ = 2be4ce95-e207-4631-806a-0a6342f5827f
+    @MARGINAL_ZONE_LYMPHOMA@ = c73a63dc-c08b-40d0-a9a8-11a9ad9ea9f3
+    @LARGE_B_CELL_LYMPHOMA@ = 70d5c89b-657d-4e46-a7e6-62cf2c04a873
+    @ANAPLASTIC_LARGE_CELL_LYMPHOMA@ = 08bc3814-bcbc-4319-b3a2-36b0d7bdb454
+    @BURKITTS_LYMPHOMA@ = 890a3c62-ec89-41a0-8ffb-ca551dc36b18
+    @T_CELL_LYMPHOMA@ = 978b1a4d-2cd0-4c51-abe0-d03ff5d54984
+    @RECTAL_ADENOCARCINOMA@ = 45f3496b-b766-4182-8539-25d69224ee0c
+    @INVASIVE_DUCTAL_CARCINOMA@ = 7cca9cd3-01b9-441e-a640-711be2dbc612
+    @INVASIVE_LOBULAR_CARCINOMA@ = 03afd505-d730-412c-8a43-78c789b297a9
+
+
+</macros>
+
+
     <style>
         .section {
         border: 1px solid$headerColor;
@@ -857,21 +917,46 @@
 
 
             <obsgroup groupingConceptId="$@PRE_SURGERY_CONSTRUCT@">
-                <tr>
-                    <td><b>Diagnosis (from biopsy):</b><br />
+                <!--<tr>-->
+                    <!--<td><b>Diagnosis (from biopsy):</b><br />-->
 
-                        <obs
-                                conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
-                                answerConceptId="$@INVASIVE_DUCTAL_CARCINOMA@"
-                                answerLabel="Invasive ductal carcinoma" /> <br />
-                        <obs
-                                conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
-                                answerConceptId="$@INVASIVE_LOBULAR_CARCINOMA@"
-                                answerLabel="Invasive Lobular Carcinoma" /> <br />
-                        <obs conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
-                             answerConceptId="$@OTHER_NON_CODED@" answerLabel="Other" /><obs conceptId="$@OTHER_PATHOLOGIC_DIAGNOSIS@" /><br />
+                        <!--<obs-->
+                                <!--conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"-->
+                                <!--answerConceptId="$@INVASIVE_DUCTAL_CARCINOMA@"-->
+                                <!--answerLabel="Invasive ductal carcinoma" /> <br />-->
+                        <!--<obs-->
+                                <!--conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"-->
+                                <!--answerConceptId="$@INVASIVE_LOBULAR_CARCINOMA@"-->
+                                <!--answerLabel="Invasive Lobular Carcinoma" /> <br />-->
+                        <!--<obs conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"-->
+                             <!--answerConceptId="$@OTHER_NON_CODED@" answerLabel="Other" /><obs conceptId="$@OTHER_PATHOLOGIC_DIAGNOSIS@" /><br />-->
+                    <!--</td>-->
+                <!--</tr>-->
+
+                <tr>
+                    <td>
+                        <table border="1">
+                            <tr>
+                                <td>
+                                    <b>Pathologic Diagnosis</b><br />
+
+                                    <workflowState workflowId="$@DIAGNOSIS_work_flow@"
+                                                   stateIds="$@INVASIVE_DUCTAL_CARCINOMA@,$@INVASIVE_LOBULAR_CARCINOMA@,$@Other_solid_cancer@"
+                                                   type="radio" />
+
+                                    <obs conceptId="$@OTHER_PATHOLOGIC_DIAGNOSIS@" />
+                                    <br/>
+
+                                    <br/>
+                                    <b> Diagnosis Status </b><br />
+                                    <workflowState workflowId="$@Diagnosis_Status@" type="radio"/>
+
+                                </td>
+                            </tr>
+                        </table>
                     </td>
                 </tr>
+
             </obsgroup>
         </table>
     </section>
@@ -952,22 +1037,44 @@
             <obsgroup groupingConceptId="$@POST_SURGERY_CONSTRUCT@">
 
 
-                <tr>
-                    <td><b>Pathologic Diagnosis (from surgery)</b><br />
+                <!--<tr>-->
+                    <!--<td><b>Pathologic Diagnosis (from surgery)</b><br />-->
 
-                        <obs
-                                conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
-                                answerConceptId="$@INVASIVE_DUCTAL_CARCINOMA@"
-                                answerLabel="Invasive ductal carcinoma" /> <br />
-                        <obs
-                                conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
-                                answerConceptId="$@INVASIVE_LOBULAR_CARCINOMA@"
-                                answerLabel="Invasive Lobular Carcinoma" /> <br />
-                        <obs conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"
-                             answerConceptId="$@OTHER_NON_CODED@" answerLabel="Other" /><obs conceptId="$@OTHER_PATHOLOGIC_DIAGNOSIS@" /><br />
+                        <!--<obs-->
+                                <!--conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"-->
+                                <!--answerConceptId="$@INVASIVE_DUCTAL_CARCINOMA@"-->
+                                <!--answerLabel="Invasive ductal carcinoma" /> <br />-->
+                        <!--<obs-->
+                                <!--conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"-->
+                                <!--answerConceptId="$@INVASIVE_LOBULAR_CARCINOMA@"-->
+                                <!--answerLabel="Invasive Lobular Carcinoma" /> <br />-->
+                        <!--<obs conceptId="$@PATHOLOGOGIC_DIAGNOSIS@"-->
+                             <!--answerConceptId="$@OTHER_NON_CODED@" answerLabel="Other" /><obs conceptId="$@OTHER_PATHOLOGIC_DIAGNOSIS@" /><br />-->
+                    <!--</td>-->
+                <!--</tr>-->
+                <tr>
+                    <td>
+                        <table border="1">
+                            <tr>
+                                <td>
+                                    <b>Pathologic Diagnosis</b><br />
+
+                                    <workflowState workflowId="$@DIAGNOSIS_work_flow@"
+                                                   stateIds="$@INVASIVE_DUCTAL_CARCINOMA@,$@INVASIVE_LOBULAR_CARCINOMA@,$@Other_solid_cancer@"
+                                                   type="radio" />
+
+                                    <obs conceptId="$@OTHER_PATHOLOGIC_DIAGNOSIS@" />
+                                    <br/>
+
+                                    <br/>
+                                    <b> Diagnosis Status </b><br />
+                                    <workflowState workflowId="$@Diagnosis_Status@" type="radio"/>
+
+                                </td>
+                            </tr>
+                        </table>
                     </td>
                 </tr>
-
             </obsgroup>
         </table>
     </section>
@@ -1344,8 +1451,6 @@
 
         </table>
     </section>
-
-    <encounterVoided/>
 
     <submit />
     <br />
