Update Oncology Exit V 2017-11-23.html

--- a/Oncology HTML forms--this folder should be moved/Oncology Exit V 2017-11-23.html
+++ b/Oncology HTML forms--this folder should be moved/Oncology Exit V 2017-11-23.html
@@ -351,7 +351,7 @@
                             class="value"
                             expression="patientIdentifiers.get(&quot;IMB Primary Care Registration ID&quot;)" /></b>
                     </td>
-                    <td>Date: <encounterDate id="encounterDate" default="today" />
+                    <td>Date: <encounterDate id="encounterDate" default="today" /> Date of death when patient died
                     </td>
                 </tr>
                 <tr>
@@ -398,8 +398,8 @@
                 </tr>
                 <tr >
                     <td class="midleCell"><b>Reason for exit</b>:</td>
-                    <td style="border-bottom-style:dashed; border-width:1px; border-color:black;" colspan="2" class="checkboxGroup">
-                        If the patient is exiting permanently, fill this drop down. <exitFromCare/>
+                 <td style="border-bottom-style:dashed; border-width:1px; border-color:black;" colspan="2" class="checkboxGroup">
+                      <!--  If the patient is exiting permanently, fill this drop down. <exitFromCare/> -->
                         <br/>
 						<span id="checkboxRadio">
 						<obs conceptId="$@ONC_END_REASON@"
